--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,10 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="gray">#595656</color>
     <color name="brave">#BF1304</color>
-
+    <color name="dark">#222126</color>
+    <color name="baron">#BF1304</color>
+    <color name="vegan">#60731A</color>
+    <color name="pumpkin">#D95204</color>
+    <color name="soft">#F2A477</color>
+    <color name="soft20">#80F2A477</color>
 </resources>
