--- a/app/src/main/res/layout/activity_empty_home.xml
+++ b/app/src/main/res/layout/activity_empty_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical"
-    tools:context=".EmptyHomeActivity">
+    tools:context=".Activities.EmptyHomeActivity">
 
     <TextView
         android:layout_width="wrap_content"
