--- a/app/src/main/res/layout/activity_empty_home.xml
+++ b/app/src/main/res/layout/activity_empty_home.xml
@@ -1,38 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:orientation="vertical"
-    tools:context=".Activities.EmptyHomeActivity">
+    android:layout_height="match_parent">
 
-    <TextView
+    <RelativeLayout
+        android:id="@+id/rl_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="12dp"
+        android:visibility="visible">
+
+        <ImageButton
+            android:id="@+id/btn_open_drawer"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@color/transparent"
+            android:onClick="openDrawer"
+            android:background="@drawable/menu"/>
+    </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Aparentemente você está sem fome essa semana!"
-        android:textSize="25dp"
-        android:layout_marginTop="80dp"
-        android:gravity="center"
-        android:textColor="@color/black"/>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/nav_menu"
+        app:headerLayout="@layout/nav_header">
+    </com.google.android.material.navigation.NavigationView>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/camaleao_cozinheiro"
-        android:layout_gravity="center"
-        android:layout_marginTop="70dp"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="250dp"
-        android:layout_height="57dp"
-        android:text="Deixe-me ver as opções"
-        android:textAllCaps="false"
-        android:layout_gravity="center"
-        android:layout_marginTop="80dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/brave"/>
+        android:orientation="vertical"
+        tools:context=".Activities.EmptyHomeActivity">
 
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Aparentemente você está sem fome essa semana!"
+            android:textSize="25dp"
+            android:layout_marginTop="80dp"
+            android:padding="10dp"
+            android:gravity="center"
+            android:textColor="@color/black"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/camaleao_cozinheiro"
+            android:layout_gravity="center"
+            android:layout_marginTop="70dp"/>
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="250dp"
+            android:layout_height="57dp"
+            android:text="Deixe-me ver as opções"
+            android:textAllCaps="false"
+            android:layout_gravity="center"
+            android:layout_marginTop="80dp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/brave"/>
+
+    </LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
