--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
     <color name="transparent">#00FFFFFF</color>
     <color name="gray">#595656</color>
     <color name="brave">#BF1304</color>
@@ -16,4 +17,5 @@
     <color name="pumpkin">#D95204</color>
     <color name="soft">#F2A477</color>
     <color name="soft20">#80F2A477</color>
+    <color name="ice">#45B0B0B0</color>
 </resources>
