--- a/app/src/main/res/layout/card_home.xml
+++ b/app/src/main/res/layout/card_home.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:backgroundTint="@color/baron"
-    android:layout_marginTop="10dp"
+    android:layout_marginHorizontal="15dp"
+    android:layout_marginVertical="9dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="10dp">
@@ -13,8 +14,8 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="150dp"
-            android:layout_height="150dp">
+            android:layout_width="120dp"
+            android:layout_height="120dp">
 
             <ImageView
                 android:id="@+id/cardHome_image"
@@ -34,8 +35,8 @@
                 android:id="@+id/cardHome_name"
                 android:text="Franguinho"
                 android:textStyle="bold"
-                android:textColor="@color/dark"
-                android:textSize="25dp"
+                android:textColor="@color/black"
+                android:textSize="18dp"
                 android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
