--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cadastre-se"
+        android:text="@string/cadastre_se"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
@@ -28,7 +28,7 @@
         android:id="@+id/txt_name"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="Nome"
+        android:hint="@string/nome"
         android:paddingLeft="10dp"
         android:background="@drawable/edittext_border"
         android:layout_margin="5dp"
@@ -38,7 +38,7 @@
         android:id="@+id/txt_cell"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="Celular"
+        android:hint="@string/contato"
         android:paddingLeft="10dp"
         android:background="@drawable/edittext_border"
         android:layout_margin="5dp"
@@ -48,7 +48,7 @@
         android:id="@+id/txt_adress"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="Endereço"
+        android:hint="@string/endereco"
         android:paddingLeft="10dp"
         android:background="@drawable/edittext_border"
         android:layout_margin="5dp"
@@ -62,7 +62,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:inputType="none"
-        android:hint="Aniversário"
+        android:hint="@string/aniversario"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:drawableEnd="@drawable/ic_calendar"
@@ -74,7 +74,7 @@
         android:id="@+id/txt_email"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="E-mail"
+        android:hint="@string/email"
         android:paddingLeft="10dp"
         android:background="@drawable/edittext_border"
         android:layout_margin="5dp"
@@ -84,7 +84,8 @@
         android:id="@+id/txt_password"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="Senha"
+        android:hint="@string/senha"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:background="@drawable/edittext_border"
         android:layout_margin="5dp"
@@ -94,7 +95,7 @@
         android:id="@+id/btn_conclude"
         android:layout_width="200dp"
         android:layout_height="57dp"
-        android:text="Concluir"
+        android:text="@string/concluir"
         android:textAllCaps="false"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
