--- a/app/src/main/res/layout/activity_home_list.xml
+++ b/app/src/main/res/layout/activity_home_list.xml
@@ -14,34 +14,36 @@
         android:id="@+id/rl_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="12dp"
         android:orientation="vertical"
         android:visibility="visible">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="@color/ice"
             android:orientation="horizontal"
             android:visibility="visible">
 
-        <ImageButton
-            android:layout_marginLeft="12dp"
-            android:id="@+id/btn_open_drawer"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@color/transparent"
-            android:onClick="openDrawer"
-            android:background="@drawable/menu"/>
+            <ImageButton
+                android:layout_marginLeft="15dp"
+                android:id="@+id/btn_open_drawer"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@color/transparent"
+                android:layout_centerVertical="true"
+                android:onClick="openDrawer"
+                android:background="@drawable/menu"/>
 
             <TextView
-                android:layout_width="180dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="90dp"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
                 android:text="Sua lista de Pratos"
                 android:textSize="20dp"
                 android:textStyle="bold"/>
-        </LinearLayout>
+
+        </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
