--- a/app/src/main/res/layout/activity_empty_home.xml
+++ b/app/src/main/res/layout/activity_empty_home.xml
@@ -60,7 +60,7 @@
             android:layout_marginTop="70dp"/>
 
         <Button
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_weekmenu"
             android:layout_width="250dp"
             android:layout_height="57dp"
             android:text="@string/deixe_me_ver_opcoes"
