--- a/app/src/main/res/layout/activity_empty_home.xml
+++ b/app/src/main/res/layout/activity_empty_home.xml
@@ -5,25 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
+    style="@style/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:id="@+id/rl_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="12dp"
-        android:visibility="visible">
-
-        <ImageButton
-            android:id="@+id/btn_open_drawer"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@color/transparent"
-            android:onClick="openDrawer"
-            android:background="@drawable/menu"/>
-    </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
@@ -32,6 +16,7 @@
         android:layout_gravity="start"
         app:menu="@menu/nav_menu"
         app:headerLayout="@layout/nav_header">
+
     </com.google.android.material.navigation.NavigationView>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -42,33 +27,48 @@
         android:orientation="vertical"
         tools:context=".Activities.EmptyHomeActivity">
 
+        <RelativeLayout
+            style="@style/toolbar"
+            android:id="@+id/rl_main"
+            android:orientation="horizontal"
+            android:visibility="visible">
+
+            <ImageButton
+                android:id="@+id/btn_open_drawer"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@color/transparent"
+                android:onClick="openDrawer"
+                style="@style/menu_icon"/>
+        </RelativeLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sem_fome_essa_semana"
             android:textSize="25dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginVertical="20dp"
             android:padding="10dp"
             android:gravity="center"
-            android:textColor="@color/black"/>
+            style="@style/text_fix"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/camaleao_cozinheiro"
             android:layout_gravity="center"
-            android:layout_marginTop="70dp"/>
+            android:layout_marginBottom="80dp"
+            android:layout_marginTop="30dp"/>
 
         <Button
             android:id="@+id/btn_weekmenu"
-            android:layout_width="250dp"
-            android:layout_height="57dp"
+            style="@style/button_style"
             android:text="@string/deixe_me_ver_opcoes"
             android:textAllCaps="false"
             android:layout_gravity="center"
-            android:layout_marginTop="80dp"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/brave"/>
+            />
 
     </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
