--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     style="@style/background"
-    tools:context=".Activities.DetailsActivity">
+    tools:context=".Activities.AboutActivity">
 
     <RelativeLayout
         style="@style/toolbar"
@@ -39,7 +39,7 @@
 
         <TextView
             android:id="@+id/name_details"
-            android:text="Nome Prato"
+            android:text="Rangoo App"
             android:textSize="30dp"
             style="@style/text_fix"
             android:textStyle="bold"
@@ -49,7 +49,7 @@
 
         <ImageView
             android:id="@+id/image_details"
-            android:src="@drawable/franguinho"
+            android:src="@drawable/rangoo_dark"
             android:background="@drawable/border_image"
             android:layout_gravity="center"
             android:layout_marginVertical="20dp"
@@ -62,7 +62,7 @@
             android:textSize="15dp"
             android:textAlignment="inherit"
             android:justificationMode="inter_word"
-            android:text=""
+            android:text="Produzido por wallace e Gabi"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
