--- a/app/src/main/res/layout/activity_home_list.xml
+++ b/app/src/main/res/layout/activity_home_list.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,41 +19,37 @@
         android:visibility="visible">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="@color/ice"
+            style="@style/toolbar"
             android:orientation="horizontal"
             android:visibility="visible">
 
             <ImageButton
                 android:layout_marginLeft="15dp"
                 android:id="@+id/btn_open_drawer"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@color/transparent"
+                style="@style/menu_icon"
                 android:layout_centerVertical="true"
                 android:onClick="openDrawer"
-                android:background="@drawable/menu"/>
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-                android:text="Sua lista de Pratos"
-                android:textSize="20dp"
-                android:textStyle="bold"/>
+                android:text="@string/sua_lista_de_pratos"
+                style="@style/text_toolbar"
+                />
 
         </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
-            android:background="@color/soft20"
+            style="@style/modal_card"
             android:layout_gravity="center"
             android:layout_width="390dp"
             android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
-            android:paddingTop="20dp"
+            android:layout_marginVertical="15dp"
+            android:paddingVertical="10dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/card_home"/>
     </LinearLayout>
