--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:gravity="center"
+    android:padding="20dp"
+    style="@style/background"
     tools:context=".Activities.LoginActivity"
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/rangooLogo"
+        style="@style/logo_image"
         android:layout_width="match_parent"
-        android:layout_height="127dp"
-        android:layout_marginTop="90dp"
-        android:src="@drawable/rangoologo"
-        android:layout_marginBottom="80dp"/>
+        android:layout_height="250dp"
+        />
 
     <EditText
         android:id="@+id/signin_login"
@@ -53,14 +53,11 @@
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="200dp"
-        android:layout_height="57dp"
+        style="@style/button_style"
         android:text="@string/entrar"
         android:textAllCaps="false"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/brave"/>
+        android:layout_marginTop="30dp" />
 
     <ImageButton
         android:id="@+id/btn_google"
