--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,17 @@
     <color name="soft">#F2A477</color>
     <color name="soft20">#80F2A477</color>
     <color name="ice">#45B0B0B0</color>
+
+    <!-- Light Mode -->
+    <color name="light_toolbar_color">#BAB0B0B0</color>
+    <color name="light_background_color">@color/white</color>
+    <color name="light_modal_color">#BAF2A476</color>
+
+
+
+    <!-- Dark Mode -->
+    <color name="dark_toolbar_color">#3C3A43</color>
+    <color name="dark_background_color">@color/dark</color>
+    <color name="dark_modal_color">#3C3A43</color>
+
 </resources>
