--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,93 @@
     <!-- Base application theme. -->
     <style name="Theme.Rangoo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/light_toolbar_color</item>
+        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorOnPrimary">@color/light_background_color</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/baron</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/ice</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="background">
+        <item name="android:background">@color/light_background_color</item>
+    </style>
+
+    <style name="logo_image">
+        <item name="android:src">@drawable/rangoologo</item>
+    </style>
+
+    <style name="lucas_image">
+        <item name="android:src">@drawable/lucasrangoo</item>
+    </style>
+
+    <style name="text_fix">
+        <item name="android:textColor">@color/dark</item>
+    </style>
+
+    <style name="back_icon">
+        <item name="android:background">@drawable/back</item>
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+    </style>
+
+    <style name="menu_icon">
+        <item name="android:background">@drawable/menu</item>
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_marginLeft">15dp</item>
+    </style>
+
+    <style name="home_icon">
+        <item name="android:background">@drawable/home</item>
+    </style>
+
+    <style name="profile_icon">
+        <item name="android:background">@drawable/profile</item>
+    </style>
+
+    <style name="info_icon">
+        <item name="android:background">@drawable/info</item>
+    </style>
+
+    <style name="exit_icon">
+        <item name="android:background">@drawable/exit</item>
+    </style>
+
+    <style name="icon_fix">
+        <item name="android:background">@color/dark</item>
+    </style>
+
+    <style name="toolbar">
+        <item name="android:background">@color/light_toolbar_color</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">70dp</item>
+    </style>
+
+    <style name="text_toolbar">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="modal_card">
+        <item name="android:background">@drawable/card_border_radius</item>
+    </style>
+
+    <style name="button_style">
+        <item name="android:layout_width">250dp</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="backgroundTint">@color/baron</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    
+    <style name="seekBar">
+        <item name="android:src">@drawable/sol</item>
+    </style>
+    
 </resources>
