--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,6 +9,12 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/home"
             android:title="Home" />
+
+        <item
+            android:id="@+id/mode_define"
+            android:icon="@drawable/sol"
+            android:title="Definir Modo"/>
+
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/info"
